syntax = "proto3";

package io.vg.srv.productLocation;

import 'common.proto';
import 'google/protobuf/any.proto';
import "google/protobuf/timestamp.proto";
import 'google/protobuf/wrappers.proto';
import 'google/protobuf/struct.proto';

message ProductLocation {
  // normal field
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  google.protobuf.Timestamp deletedAt = 4;
  google.protobuf.StringValue createdBy = 5;
  google.protobuf.StringValue updatedBy = 6;
  google.protobuf.StringValue deletedBy = 7;
  // reserved field
  string productId = 8;
  string locationId = 9;
}

message ProductLocations {
  repeated ProductLocation productLocations = 1;
}

message ProductLocationEdge {
  ProductLocations node = 1;
  string cursor = 2;
}

message ProductLocationConnection {
  common.PageInfo pageInfo = 1;
  int32 totalCount = 2;
  repeated ProductLocationEdge edges = 3;
}

message ProductLocationInput {
  string productId = 1;
  string locationId = 2;
}

message CreateProductLocationInput {
  ProductLocationInput data = 1;
}

message CreateManyProductLocationsInput {
  repeated ProductLocationInput ProductLocations = 1;
}

message UpdateProductLocationInput {
  string id = 1;
  ProductLocationInput data = 2;
}

message UpdateManyProductLocationsInput {
  google.protobuf.Any filter = 1;
  ProductLocationInput update = 2;
}

message DeleteManyProductLocationsInput {
  google.protobuf.Any filter = 1;
}

message NullableProductLocation {
  oneof kind {
    google.protobuf.NullValue null = 1;
    ProductLocation data = 2;
  }
}